--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.dialect:org.hibernate.dialect.MySQL5Dialect
 
 logging.level.org.hibernate.SQL:debug
 
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
+
